I was so focused on the other type of bar, I didn't even notice the XP style never even worked in the first place dfkbnlkbndlknblkdb